--- a/HareBlog/templates/blog/list.html
+++ b/HareBlog/templates/blog/list.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="zh-hans">
 <head>
     <meta charset="UTF-8">
-    <title>list</title>
+
+    <title>HareBlog</title>
 </head>
 <body>
-{{ name }}
+{% if tag %}
+    标签页: {{ tag.name }}
+{% endif %}
+{% if category %}
+    分类页: {{ category.name }}
+{% endif %}
+<ul>
+    {% for post in post_list %}
+        <li>
+            <a href="/post/{{ post.id }}.html">{{ post.title }}</a>
+            <div>
+                <span>作者:{{ post.owner.username }}</span>
+                <span>分类: <a href="/category/{{ post.category.id }}">{{ post.category.name }}</a> </span>
+            </div>
+            <p>{{ post.desc }}</p>
+
+        </li>
+    {% endfor %}
+</ul>
+
 </body>
 </html>
