--- a/HareBlog/themes/bootstrap/templates/blog/list.html
+++ b/HareBlog/themes/bootstrap/templates/blog/list.html
@@ -11,19 +11,22 @@
 
 {% endblock %}
 {% block main %}
-    <ul>
-        {% for post in post_list %}
-            <li>
+    {% for post in post_list %}
+        <div class="card-body">
+            <h5 class="card-title">
                 <a href="{% url 'post-detail' post.id %}">{{ post.title }}</a>
-                <div>
-                    <span>作者:{{ post.owner.username }}</span>
-                    <span>分类:{{ post.category.name }}</span>
-                </div>
-                <p>{{ post.desc }}</p>
-
-            </li>
-        {% endfor %}
-    </ul>
+            </h5>
+            <span class="card-link">作者: <a href="#"> {{ post.owner.username }}</a></span>
+            <span class="card-link">分类: <a
+                    href="{% url 'category-list' post.category.id %}">{{ post.category.name }}</a></span>
+            <span class="card-link">标签:
+                {% for tag in post.tab.all %}
+                    <a href="{% url 'tag-list' tag.id %}">{{ tag.name }}</a>
+                {% endfor %}
+                </span>
+            <p class="card-text">{{ post.desc }}<a href="{% url 'post-detail' post.id %}">完整内容</a></p>
+        </div>
+    {% endfor %}
     {% if page_obj %}
         {% if page_obj.has_previous %}
             <a href="?page={{ page_obj.previous_page_number }}">上一页</a>
