修改了评论模型类

--- a/HareBlog/themes/bootstrap/templates/blog/list.html
+++ b/HareBlog/themes/bootstrap/templates/blog/list.html
@@ -12,11 +12,11 @@
 {% endblock %}
 {% block main %}
     {% for post in post_list %}
-        <div class="card-body">
+        <div class="card-body shadow-sm">
             <h5 class="card-title">
                 <a href="{% url 'post-detail' post.id %}">{{ post.title }}</a>
             </h5>
-            <span class="card-link">作者: <a href="#"> {{ post.owner.username }}</a></span>
+            <span class="card-link">作者: <a href="{% url 'author' post.owner.id %}"> {{ post.owner.username }}</a></span>
             <span class="card-link">分类: <a
                     href="{% url 'category-list' post.category.id %}">{{ post.category.name }}</a></span>
             <span class="card-link">标签:
@@ -24,17 +24,20 @@
                     <a href="{% url 'tag-list' tag.id %}">{{ tag.name }}</a>
                 {% endfor %}
                 </span>
-            <p class="card-text">{{ post.desc }}<a href="{% url 'post-detail' post.id %}">完整内容</a></p>
-        </div>
+            <p class="card-text">{{ post.desc }}<a href="{% url "post-detail" post.id %}">完整内容</a></p>
+        </div>\
     {% endfor %}
-    {% if page_obj %}
-        {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">上一页</a>
+    <div class="container shadow-sm mt-5">
+        {% if page_obj %}
+            {% if page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}">上一页</a>
+            {% endif %}
+            第{{ page_obj.number }}页 / 共{{ paginator.num_pages }}页
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">下一页</a>
+            {% endif %}
         {% endif %}
-        第{{ page_obj.number }}页 / 共{{ paginator.num_pages }}页
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">下一页</a>
-        {% endif %}
-    {% endif %}
+    </div>
+
 
 {% endblock %}
