--- a/HareBlog/themes/bootstrap/templates/blog/base.html
+++ b/HareBlog/themes/bootstrap/templates/blog/base.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="container head">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <a href="/" class="navbar-brand">首页</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -25,28 +25,28 @@
                     </li>
                 {% endfor %}
             </ul>
-            <form action="GET" class="form-inline my-2 my-lg-0">
-                <input type="search" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
+            <form action="/search/" class="form-inline my-2 my-lg-0" method="GET">
+                <input type="search" name="keyword" value="{{ keyword }}" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">搜索</button>
             </form>
         </div>
     </nav>
-    <div class="jumbotron">
+    <div class="jumbotron shadow-sm">
         <h1 class="display-4">HareBlog</h1>
         <p class="lead">基于Django的博客系统</p>
     </div>
 </div>
 
 
-<div class="container main">
+<div class="container main ">
     <div class="row">
         <div class="col-9 post-list">
             {% block main %}{% endblock %}
         </div>
-        <div class="col-3">
+        <div class="col-3 shadow-sm">
             {% block sidebar %}
                 {% for sidebar in sidebars %}
-                    <div class="card sidebar">
+                    <div class="sidebar">
                         <div class="card-body">
                             <h4>{{ sidebar.title }}</h4>
                             <p>{{ sidebar.content_html }}</p>
