--- a/HareBlog/themes/bootstrap/templates/blog/detail.html
+++ b/HareBlog/themes/bootstrap/templates/blog/detail.html
@@ -1,4 +1,5 @@
 {% extends "./base.html" %}
+{% load comment_block %}
 {% block title %}
     {{ post.title }}
 {% endblock %}
@@ -11,7 +12,14 @@
         </div>
         <hr>
         <p>
-            {{ post.content }}
+
+            {% autoescape off %}
+                {{ post.content_html }}
+            {% endautoescape %}
         </p>
     {% endif %}
+
+    {% comment_block request.path %}
+
 {% endblock %}
+
