--- a/HareBlog/themes/bootstrap/templates/config/blocks/sidebar_comments.html
+++ b/HareBlog/themes/bootstrap/templates/config/blocks/sidebar_comments.html
@@ -1,6 +1,6 @@
 <ul>
     {% for comment in comments %}
-        <li><a href="/post/{{ comment.target_id }}.html">{{ comment.target.title }}</a> |
-            {{ comment.nickname }} : {{ comment.content }}</li>
+        <li><a href="{{ comment.target }}">{{ comment.target }}</a> |
+            {{ comment.nickname }} : {% autoescape off %}{{ comment.content }}{% endautoescape %}</li>
     {% endfor %}
 </ul>
